@@ -65,8 +65,8 @@ struct linestack_ops {
 	 * a specific keyword ? */
 };
 
-G_MODULE_EXPORT void register_linestack(struct linestack_ops *);
-G_MODULE_EXPORT void unregister_linestack(struct linestack_ops *);
+G_MODULE_EXPORT void register_linestack(const struct linestack_ops *);
+G_MODULE_EXPORT void unregister_linestack(const struct linestack_ops *);
 G_MODULE_EXPORT linestack_marker *linestack_get_marker_numlines (
 		struct network *, 
 		int lines);
